force-app/main/default/objects/DripEnrollment__c/DripEnrollment__c.object-meta.xml
<CustomObject>
    <label>Drip Enrollment</label>
    <nameField>
        <displayFormat>DENR-{000000}</displayFormat>
        <label>Drip Enrollment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drip Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>