force-app/main/default/objects/DripEnrollment__c/fields/DripCampaign__c.field-meta.xml
<CustomField>
    <fullName>DripCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drip Campaign</label>
    <referenceTo>DripCampaign__c</referenceTo>
    <relationshipLabel>Drip Enrollments</relationshipLabel>
    <relationshipName>DripEnrollments</relationshipName>
    <type>Lookup</type>
</CustomField>