force-app/main/default/objects/DripEnrollment__c/fields/Enrolled_At__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_At__c</fullName>
    <label>Enrolled At</label>
    <type>DateTime</type>
</CustomField>