force-app/main/default/objects/DripEnrollment__c/fields/Last_Step_Day__c.field-meta.xml
<CustomField>
    <fullName>Last_Step_Day__c</fullName>
    <label>Last Step Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>