force-app/main/default/objects/DripEnrollment__c/fields/Reactivate_At__c.field-meta.xml
<CustomField>
    <fullName>Reactivate_At__c</fullName>
    <label>Reactivate At</label>
    <type>Date</type>
</CustomField>