force-app/main/default/objects/DripEnrollment__c/fields/Reactivated__c.field-meta.xml
<CustomField>
    <fullName>Reactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reactivated</label>
    <type>Checkbox</type>
</CustomField>